<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Interface.DetailMovie">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backPosterTV"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:contentDescription="@string/backPoster"
            android:scaleType="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewTV"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarTV"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@android:color/transparent"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toTopOf="@+id/backPosterTV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="700dp"
            android:layout_marginTop="196dp"
            android:background="@android:color/white"
            android:contentDescription="@string/backPoster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/backPosterTV" />

        <ProgressBar
            android:id="@+id/progressBarDetailTV"
            style="?android:attr/progressBarStyle"
            android:layout_width="76dp"
            android:layout_height="67dp"
            android:layout_marginTop="456dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/viewTV"
            app:layout_constraintHorizontal_bias="0.794"
            app:layout_constraintStart_toStartOf="@+id/viewTV"
            app:layout_constraintTop_toTopOf="@+id/viewTV" />

        <androidx.cardview.widget.CardView
            android:id="@+id/posterHolderDetailTV"
            android:layout_width="130dp"
            android:layout_height="160dp"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="248dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/backPosterTV"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/posterDetailTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/posterMovie"
                android:scaleType="fitXY" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/titleDetailTV"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="24dp"
            android:maxLines="3"
            android:text="@string/dummy"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/viewTV"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/dateDetailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="84dp"
            android:text="@string/dummy_date"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/backPosterTV"
            app:layout_constraintTop_toBottomOf="@+id/titleDetailTV" />

        <TextView
            android:id="@+id/overviewDetailTextTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/overviewText"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/viewTV"
            app:layout_constraintTop_toBottomOf="@+id/posterHolderDetailTV" />

        <TextView
            android:id="@+id/overviewDetailTV"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:maxLines="20"
            android:text="@string/dummy_overview"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/viewTV"
            app:layout_constraintTop_toBottomOf="@+id/overviewDetailTextTV" />

        <TextView
            android:id="@+id/statusDetailTextTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/statusText"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/viewTV"
            app:layout_constraintTop_toBottomOf="@+id/overviewDetailTV" />

        <TextView
            android:id="@+id/statusDetailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/dummy_status"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/statusDetailTextTV"
            app:layout_constraintTop_toBottomOf="@+id/overviewDetailTV" />

        <TextView
            android:id="@+id/ratingDetailTextTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/ratingText"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/viewTV"
            app:layout_constraintTop_toBottomOf="@+id/statusDetailTextTV" />

        <TextView
            android:id="@+id/ratingDetailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_rating"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.578"
            app:layout_constraintStart_toEndOf="@+id/ratingDetailTextTV"
            app:layout_constraintTop_toBottomOf="@+id/statusDetailTV" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/ten"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/ratingDetailTextTV"
            app:layout_constraintTop_toBottomOf="@+id/statusDetailTV" />

        <TextView
            android:id="@+id/seasonDetailTextTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/seasonText"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/viewTV"
            app:layout_constraintTop_toBottomOf="@+id/ratingDetailTextTV" />

        <TextView
            android:id="@+id/seasonDetailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/dummy_season"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/seasonDetailTextTV"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/episodesText"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/viewTV"
            app:layout_constraintTop_toBottomOf="@+id/seasonDetailTextTV" />

        <TextView
            android:id="@+id/episodesDetailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/dummy_episodes"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/seasonDetailTV" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>