<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:id="@+id/cardviewMV"
    app:cardCornerRadius="4dp"
    android:elevation="4dp"
    android:layout_marginBottom="12dp"
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="12dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/posterHolderMV"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/posterMV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/posterMovie"
                android:scaleType="fitXY" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/titleTextMV"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_toEndOf="@+id/posterHolderMV"
            android:text="@string/titleText"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dateTextMV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleTextMV"
            android:layout_marginStart="27dp"
            android:layout_toEndOf="@+id/posterHolderMV"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingTextMV"
            android:layout_below="@+id/dateTextMV"
            android:layout_marginStart="27dp"
            android:layout_marginTop="39dp"
            android:layout_toEndOf="@+id/posterHolderMV"
            android:text="@string/ratingText"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/voteTextMV"
            android:layout_below="@+id/ratingTextMV"
            android:layout_toEndOf="@+id/posterHolderMV"
            android:layout_marginStart="27dp"
            android:textSize="12sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
